# libShapeDescriptor

./: .gitignore  .gitmodules  .todo  CMakeLists.txt  README.md  SHREC2017_ALL_PIXEL_COUNTS_v2.txt
examples/simple_cpu/: CMakeLists.txt  main.cpp
examples/simple_gpu/: CMakeLists.txt  main.cpp
include/shapeDescriptor/: compressedDescriptorIO.h  containerTypes.h  geometryTypes.h  libraryBuildSettings.h  shapeDescriptor.h
include/shapeDescriptor/buildSettings/: derivedBuildSettings.h
include/shapeDescriptor/cpu/: SHOTGenerator.h
include/shapeDescriptor/descriptors/: SHOTGenerator.h  ShapeContextGenerator.h
include/shapeDescriptor/types/: GPUFloat2.h  GPUFloat3.h  conversions.h  double2.h  double3.h  float2.h  float3.h  float4.h  int3.h  uchar3.h
lib/cuda-samples/Common/: helper_math.h
lib/fast-lzma2/: CMakeLists.txt
lib/fast-obj/: fast_obj.h
lib/json/: json.hpp
lib/nvidia-samples-common/nvidia/: helper_cuda.h  helper_functions.h  helper_math.h  helper_string.h  prefix_scan.cu  prefix_scan.cuh  sharedmem.cuh  shfl_integral_image.cuh  shfl_scan.cu  shfl_scan.cuh
lib/ziplib/: CMakeLists.txt
misc/: combine.py  recompress.py
misc/3dsctest/: .gitignore  3dsctest.cpp  CMakeLists.txt
misc/bitcounts/: heatmap.py
src/: MSIConverter.cpp  MSIConverter.h  MSIDistanceFunction.cpp  MSIGenerator.cpp  MSIGenerator.hpp  Mesh.h  MeshIntersector.cpp  MeshIntersector.h  OBJLoader.cpp  OBJLoader.h  SpinImageSizeCalculator.cpp  SpinImageSizeCalculator.h  arrayTypes.hpp  constants.h  geom.cpp  geom.hpp  shapes.h
src/experimentUtilities/: filesystem.cpp  listDir.cpp  listDir.h
src/shapeDescriptor/: libraryBuildSettings.h
src/shapeDescriptor/common/: BoundingBox.h  OrientedPoint.h
src/shapeDescriptor/cpu/: 3dShapeContextGenerator.cpp  fastPointFeatureHistogramGenerator.cpp  quickIntersectionCountImageGenerator.cpp  quickIntersectionCountImageGenerator.h  radialIntersectionCountImageGenerator.cpp  radialIntersectionCountImageGenerator.h  rotationalProjectionStatisticsGenerator.cpp  spinImageGenerator.cpp  spinImageGenerator.h  universalShapeContextGenerator.cpp
src/shapeDescriptor/gpu/: 3dShapeContextGenerator.cu  3dShapeContextGenerator.cuh  3dShapeContextSearcher.cu  3dShapeContextSearcher.cuh  fastPointFeatureHistogramGenerator.cu  fastPointFeatureHistogramGenerator.cuh  fastPointFeatureHistogramSearcher.cu  fastPointFeatureHistogramSearcher.cuh  gpuCommon.h  quickIntersectionCountImageGenerator.cu  quickIntersectionCountImageGenerator.cuh  quickIntersectionCountImageSearcher.cu  quickIntersectionCountImageSearcher.cuh  radialIntersectionCountImageGenerator.cu  radialIntersectionCountImageGenerator.cuh  radialIntersectionCountImageSearcher.cu  radialIntersectionCountImageSearcher.cuh  spinImageGenerator.cu  spinImageGenerator.cuh  spinImageSearcher.cu  spinImageSearcher.cuh
src/shapeDescriptor/utilities/: CUDAAvailability.cpp  CUDAAvailability.h  CUDAContextCreator.cpp  CUDAContextCreator.h  SHOTLocalReferenceFrame.cpp  eigenValues.cpp  fileutils.cpp  fileutils.h  meshSampler.cpp  meshSampler.h  pointCloudUtils.cpp  spinOriginsGenerator.cpp  spinOriginsGenerator.h  weightedHamming.cuh
src/shapeSearch/: MSIConverter.cpp  MSIDistanceFunction.h  MSIGenerator.cpp  MSIGenerator.hpp  Mesh.h  MeshIntersector.cpp  MeshIntersector.h  OBJLoader.cpp  OBJLoader.h  SpinImageSizeCalculator.h  geom.cpp  libraryBuildSettings.h  shapes.h
src/shapeSearch/common/: OBJLoader.cpp  OBJLoader.h  spinImageDumper.cpp  spinImageDumper.h
src/shapeSearch/cpu/: MSICompressor.cpp  MSICompressor.h  MSIConverter.cpp  MSIConverter.h  MSIDistanceFunction.cpp  MSIDistanceFunction.h  MSIGenerator.cpp  MSIGenerator.h  MSIGenerator.hpp  Mesh.h  MeshIntersector.cpp  MeshIntersector.h  MeshScaler.cpp  MeshScaler.h  OBJLoader.h  QSIDistanceFunction.cpp  QSIDistanceFunction.h  QSIGenerator.cpp  QSIGenerator.h  QSIGenerator.hpp  SpinImageSizeCalculator.cpp  SpinImageSizeCalculator.h  geom.hpp  hostMesh.cpp  hostMesh.h  shapes.cpp  shapes.h  spinImageSearcher.cpp  spinImageSearcher.h
src/shapeSearch/gpu/: CopyMeshHostToDevice.cpp  CopyMeshHostToDevice.h  HostToDeviceMesh.cpp  copyDescriptorsToHost.cpp  copyDescriptorsToHost.h  cudaCommon.h  deviceMesh.h  quasiSpinImageComparator.cu  quasiSpinImageComparator.cuh  quasiSpinImageGenerator.cu  quasiSpinImageGenerator.cuh  quasiSpinImageSearcher.cu  quasiSpinImageSearcher.cuh  setValue.cu  spinImageGenerator.cu  spinImageGenerator.cuh  spinImageSearcher.cu  spinImageSearcher.cuh  utilityKernels.cu  utilityKernels.cuh
src/shapeSearch/utilities/: CUDAContextCreator.cpp  CUDAContextCreator.h  Histogram.cpp  Histogram.h  MeshScaler.cpp  MeshScaler.h  OBJLoader.cpp  OBJLoader.h  searchResultDumper.cpp  searchResultDumper.h  spinImageDumper.cpp  spinImageDumper.h
src/spinImage/: libraryBuildSettings.h
src/spinImage/common/: quasiSpinImageDistanceFunction.cu  quasiSpinImageDistanceFunction.cuh  spinImageDistanceFunction.cu  spinImageDistanceFunction.cuh
src/spinImage/cpu/: MSICompressor.cpp  MSICompressor.h  MSIDistanceFunction.cpp  MSIGenerator.cpp  MSIGenerator.h  MeshIntersector.h  QSIDistanceFunction.cpp  QSIGenerator.cpp  QSIGenerator.h  quasiSpinImageSearcher.cpp  quasiSpinImageSearcher.h  spinImageSearcher.cpp  spinImageSearcher.h
src/spinImage/gpu/: 3dShapeContextGenerator.cu  3dShapeContextGenerator.cuh  3dShapeContextSearcher.cu  3dShapeContextSearcher.cuh  fastPointFeatureHistogramGenerator.cu  fastPointFeatureHistogramGenerator.cuh  setValue.cu  (+18 more)
tests/: 3dscTests.cpp  correlationComputations.cpp  indexTests.cpp  pointDensities.cpp  quasiSpinImageCorrelation.cpp  radialIntersectionCountImageCorrelation.cpp  spinImageCorrelation.cpp  testMain.cpp  vectorTypes.cpp
tests/utilities/: spinImageGenerator.cpp  spinImageGenerator.h
tools/benchmarking/: README.md  main.cpp
tools/compressor/: main.cpp
tools/imagerenderer/: arrrgh.hpp  main.cpp
tools/indexBenchmark/: main.cpp
tools/indexbuilder/: main.cpp
tools/indexqueryer/: main.cpp
tools/meshconverter/: main.cpp
tools/quiccidumper/: main.cpp
tools/quicciviewer/: main.cpp
(+346 files in other folders)
